updated-jubilee-austeen-project

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                 <div class="half-width" id="contact-info">
                     <h2>Like what you see?</h2>
                         <h3 id="email-header">Let's meet for a cup of coffee.</h3>
-                        <a href="mailto:youareastar11@gmail.com"><img src="img/envelope.png" alt="Envelope image" id="envelope"/></a>
-                        <a href="mailto:youareastar11@gmail.com">youareastar11[@]gmail.com</a>
+                        <a href="mailto:hi@jubileeausten.com"><img src="img/envelope.png" alt="Envelope image" id="envelope"/></a>
+                        <a href="mailto:hi@jubileeausten.com">hi@jubileeausten.com</a>
                         <h3 id="socialmedia-header">Or find me on the interwebs</h3>
                     <ul>
                         <li><a href="https://twitter.com/" target="_BLANK"><img src="img/twitter.png" alt="Twitter icon"/></a></li>
