--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
         <meta charset="utf-8">
-            <title>Jubilee Austeen|Developer</title>
+            <title>Jubilee Austen|Developer</title>
                 <link rel="stylesheet" href="css/normalize.css">
                 <link rel="stylesheet" href="css/main.css">
                 <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel="stylesheet" type='text/css'>
@@ -12,7 +12,7 @@
        <header>
        <div class="full-width"> 
            <div class="half-width">
-            <h1>Jubilee Austeen</h1>
+            <h1>Jubilee Austen</h1>
             </div>
                 <div class="half-width">
                 <nav>
